--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 .links {
   margin: 2rem 0;
   box-shadow: 1px 1px 1px black;
-  border-radius: 5%;
+  border-radius: 20px;
   background-color: #302f3d;
   padding: 20px;
   width: 100%;
@@ -60,7 +60,7 @@
 
 .technologies {
   box-shadow: 1px 1px 1px black;
-  border-radius: 5%;
+  border-radius: 20px;
   background-color: #302f3d;
 
   width: 100%;
@@ -92,6 +92,7 @@ h2 {
   vertical-align: middle;
   font-weight: 700;
   font-size: 10px;
+  
 }
 /* fim da estilização da div .technologies */
 /* inicio da estilização da parte de projetos github */
