--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,14 @@
   --cor-letras: #837e9f;
   --cor-tech: #cb92b1;
 }
-#root {
-  display: flex;
-  -webkit-font-smoothing: antialiased;
-  padding: 2rem;
-  width: 100%;
-  background-color: #22212c;
+p {
+  margin: 15px 0;
+}
+span {
+  margin: 0 10px;
+}
+p,
+span {
+  font-size: 14px;
+  font-weight: 400;
 }
