--- a/src/components/Techs.css
+++ b/src/components/Techs.css
@@ -31,7 +31,7 @@
   .box-tech span {
     vertical-align: middle;
     font-weight: 700;
-    font-size: 10px;
+    font-size: 0.625rem;
     
   }
 
